@@ -261,12 +261,33 @@ Point MethodOfMomentsFactory::buildParameter(const Sample & sample) const
 }
 
 
+Distribution MethodOfMomentsFactory::build(const Point & parameter) const
+{
+  Distribution result(distribution_);
+  Point parameter2(parameter);
+  // set known values
+  UnsignedInteger knownParametersSize = knownParameterIndices_.getSize();
+  for (UnsignedInteger j = 0; j < knownParametersSize; ++ j)
+  {
+    parameter2[knownParameterIndices_[j]] = knownParameterValues_[j];
+  }
+  result.setParameter(parameter2);
+  return result;
+}
+
+
+Distribution MethodOfMomentsFactory::build() const
+{
+  return build(distribution_.getParameter());
+}
+
+
 Distribution MethodOfMomentsFactory::build(const Sample & sample) const
 {
   Distribution result(distribution_);
   result.setParameter(buildParameter(sample));
   result.setDescription(sample.getDescription());
-  return result.getImplementation();
+  return result;
 }
 
 void MethodOfMomentsFactory::setOptimizationAlgorithm(const OptimizationAlgorithm& solver)
