@@ -1,3 +1,5 @@
 distribution= Beta(alpha = 2.3, beta = 2.2, a = -1, b = 1)
 estimated distribution= Beta(alpha = 2.12, beta = 2.18, a = -0.989, b = 1.01)
 estimated distribution with bounds= Beta(alpha = 2.15, beta = 2.16, a = -1, b = 1)
+Exponential(lambda = 1, gamma = 0.1)
+Exponential(lambda = 3, gamma = 0.1)
