@@ -88,6 +88,8 @@
  * #1592 (SubsetSampling returns an error if Pf=1)
  * #1594 (LinearLeastSquaresCalibration and CalibrationResult)
  * #1599 (FieldToPointConnection-BlockSize is missing)
+ * #1603 (FieldToPointConnection generates an invalid exception)
+ * #1605 (MaximumLikelihoodFactory cannot be used with FittingTest.Kolmogorov)
 
 
 == 1.15 release (2020-05-25) == #release-1.15
